--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,182 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>City List</title>
+
+    <!-- My CSS -->
+
+    <link rel="stylesheet" type="text/css" href="/css/basicCSS.css"/>
+
+    <!-- Bootstrap -->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Font Awesome -->
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+            rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+            rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css"
+            rel="stylesheet"
+    />
 </head>
 <body>
-CityLib - find your next business destination
+
+
+<div class="container" id="city_container">
+    <div class="table">
+        <div class="table-wrapper">
+            <div class="table-title">
+                <div class="row">
+                    <div class="col">
+                        <h2>City List</h2>
+                    </div>
+                    <div class="col input-group">
+                        <div class="form-outline">
+                            <input id="search-input" type="search"  class="form-control"/>
+                            <label class="form-label" for="search-input">Search</label>
+                        </div>
+                        <button id="search-button" type="button" class="btn btn-primary">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <table class="table text-center table-striped table-hover">
+                <thead>
+                <tr>
+                    <th>City</th>
+                    <th>Photo</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody id="city_body" class="align-middle">
+                <tr id="row_loading">
+                    <td>
+                        <p class="placeholder-glow">
+                            <span class="placeholder col-12"></span>
+                        </p>
+                    </td>
+                    <td>
+                        <p class="placeholder-glow">
+                            <span class="placeholder col-12"></span>
+                        </p>
+                    </td>
+                    <td>
+                        <p class="placeholder-glow">
+                            <span class="placeholder col-12"></span>
+                        </p>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+            <div class="container-fluid container-fluid d-inline-flex justify-content-center">
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <button class="page-link" id="firstPage">First</button>
+                        </li>
+                    </ul>
+
+                </nav>
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <button class="page-link" id="prevPage">Previous</button>
+                        </li>
+                    </ul>
+
+                </nav>
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item active">
+                            <button class="page-link" id="curPage">Current</button>
+                        </li>
+                    </ul>
+
+                </nav>
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <button class="page-link" id="nextPage">Next</button>
+                        </li>
+                    </ul>
+
+                </nav>
+                <nav>
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <button class="page-link" id="lastPage">Last</button>
+                        </li>
+                    </ul>
+
+                </nav>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="editName" tabindex="-1" aria-labelledby="editNameLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Name</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="edit_name_form">
+                    <div class="mb-3">
+                        <label for="edit_name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="edit_name"/>
+                    </div>
+                    <input type="hidden" id="cityNameId"/>
+                    <button type="submit" id="edit_name_button" class="btn btn-primary">Save changes</button>
+
+                </form>
+
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- MDB -->
+<script
+        type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"
+></script>
+
+<!-- jQuery -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!-- My custom JS -->
+
+<script type="text/javascript" src="/js/basicJs.js"></script>
+
+<!-- Bootstrap -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
